# AI-ML-Usecases

ml_car_price_predection/: .env  .env.local  .gitignore  AIRFLOW_DEPLOYMENT_GUIDE.md  API_EXAMPLES.md  AUTOMATIC_RETRAINING_GUIDE.md  AUTOMATIC_RETRAINING_QUICK_REFERENCE.md  COMPLETE_DOCUMENTATION_INDEX.md  COMPLETE_ROLLBACK_SYSTEM.md  DATABASE_MODEL_STORAGE.md  DEGRADATION_ANALYSIS_GUIDE.md  DEGRADATION_COMPLETE.md  DEGRADATION_DATABASE_REFERENCE.md  DEGRADATION_IMPLEMENTATION_COMPLETE.md  DEGRADATION_IMPLEMENTATION_SUMMARY.md  DEGRADATION_INDEX.md  DEGRADATION_QUICK_REFERENCE.md  DEGRADATION_SYSTEM_ARCHITECTURE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_QUICK_START.md  DOCUMENTATION_UPDATES.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile.api  Dockerfile.prod  Dockerfile.train  Dockerfile.ui  GETTING_STARTED.md  MODEL_ROLLBACK_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_DEGRADATION.md  README_DOCUMENTATION_SUMMARY.md  ROLLBACK_EXAMPLES.md  ROLLBACK_IMPLEMENTATION_SUMMARY.md  ROLLBACK_QUICK_GUIDE.md  SQL_DEGRADATION_QUERIES.md  TESTING_GUIDE.md  VISUAL_GUIDE.md  (+12 more)
ml_car_price_predection/.astro/: docker-compose.override.yml
ml_car_price_predection/configs/: airflow_config.yaml  inference_config.yaml  training_config.yaml
ml_car_price_predection/dags/: train_dag.py
ml_car_price_predection/docs/: DATABASE_INTEGRATION.md
ml_car_price_predection/k8s/: deployment-ui.yaml  service-api.yaml  service-ui.yaml
ml_car_price_predection/mlflow/: mlflow_server.sh
ml_car_price_predection/mlflow_db/: mlflow.db
(+171 files in other folders)
